[package]
name = "jack_analyzer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "JackAnalyzer"
path = "src/main.rs"

[workspace]
members = ["jack_tokenizer","compilation_engine"]

[workspace.package]
edition = "2021"
publish = false
license = "MIT"

[workspace.dependencies]
jack_tokenizer = {path = "./jack_tokenizer"}
compilation_engine = {path = "./compilation_engine"}
anyhow = "1.0.97"
rand = "0.9.0"
strum = "0.27.1"
strum_macros = "0.27.1"
pretty_assertions = "1.4.1"

[dependencies]
anyhow.workspace = true
jack_tokenizer.workspace = true
compilation_engine.workspace = true
strum.workspace = true
strum_macros.workspace = true

[dev-dependencies]
rand.workspace = true
pretty_assertions.workspace = true