[package]
name = "jack_analyzer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "JackAnalyzer"
path = "src/main.rs"

[workspace]
members = ["jack_tokenizer","compilation_engine", "tokenized_xml_writer"]

[workspace.package]
edition = "2021"
publish = false
license = "MIT"

[workspace.dependencies]
jack_tokenizer = {path = "./jack_tokenizer"}
compilation_engine = {path = "./compilation_engine"}
tokenized_xml_writer = {path = "./tokenized_xml_writer"} 
anyhow = "1.0.97"
rand = "0.9.0"
strum = "0.27.1"
strum_macros = "0.27.1"
pretty_assertions = "1.4.1"
regex = "1.11.1"

[dependencies]
jack_tokenizer.workspace = true
compilation_engine.workspace = true
tokenized_xml_writer.workspace = true
anyhow.workspace = true
strum.workspace = true
strum_macros.workspace = true
regex.workspace = true

[dev-dependencies]
rand.workspace = true
pretty_assertions.workspace = true
walkdir = "2.5.0"
